add message show && fix bug
add message show : block , entry ----yanfeng   section -------xinchen
fix bug ..

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -16,3 +16,42 @@ schedule.update.error=Schedule error failed. Please try again
 schedule.update.nochange=No edit made
 schedule.gen.message=Schedule generated successfully
 schedule.gen.error=Failed to generate schedule
+
+
+#Section message
+section.exist=section already exist
+section.created=section created
+section.delete=Selected section deleted
+section.delete.fail=Failed to deleted section. Please try again
+section.update.idnotfound=Id not found. Please select section to update
+section.updated=section updated successful
+section.update.error=section error failed. Please try again
+section.update.nochange=No Change
+section.gen.message=section generated successfully
+section.gen.error=Failed to generate section
+
+
+#Block message
+block.exist=block already exist
+block.created=block created
+block.delete=Selected block deleted
+block.delete.fail=Failed to deleted block. Please try again
+block.update.idnotfound=Id not found. Please select block to update
+block.updated=block updated successful
+block.update.error=block error failed. Please try again
+block.update.nochange=No Change
+block.gen.message=block generated successfully
+block.created.error=Failed to create block
+
+
+#Entry message
+entry.exist=entry already exist
+entry.created=entry created
+entry.delete=Selected entry deleted
+entry.delete.fail=Failed to deleted entry. Please try again
+entry.update.idnotfound=Id not found. Please select entry to update
+entry.updated=entry updated successful
+entry.update.error=entry error failed. Please try again
+entry.update.nochange=No Change
+entry.gen.message=entry generated successfully
+entry.gen.error=Failed to generate entry
